# reflow-controller

./: README.md
firmware/: CMakeLists.txt  README.rst  build.sh  prj.conf  program.sh  reflow_controller.sublime-workspace  sample.yaml
firmware/board-config/reflow_controller/: Kconfig.defconfig  board.cmake  reflow_controller.dts  reflow_controller.yaml  reflow_controller_defconfig
firmware/boards/arm/reflow_controller/: Kconfig.board  Kconfig.defconfig  pinmux.c  reflow_controller.dts
firmware/drivers/thermocouple_module/zephyr/: CMakeLists.txt  Kconfig  thermocouple_driver.c  thermocouple_driver.h
firmware/reflow_controller/: prj.conf  sample.yaml
firmware/reflow_controller/.west/: config
firmware/reflow_controller/src/: main.c
firmware/src/: main.c
hardware/reflow-controller/: Regulator_Linear.dcm  fp-info-cache  high-voltage.sch  high-voltage.sch-bak  low_voltage.sch  low_voltage.sch-bak  reflow-controller  reflow-controller-B_SilkS.gbr  reflow-controller-F_Cu.gbr  reflow-controller-F_Mask.gbr  reflow-controller-F_Paste.gbr  reflow-controller-F_SilkS.gbr  reflow-controller-PTH.drl  reflow-controller-all-pos.csv  reflow-controller-cache.lib  reflow-controller.kicad_pcb  reflow-controller.kicad_pcb-bak  reflow-controller.pro  reflow-controller.sch  reflow-controller.xml  reflow-controller_bom_jlc.csv  reflow-controller_cpl_jlc.csv
hardware/reflow-controller/gerber/: reflow-controller-B_Cu.gbr  reflow-controller-B_Mask.gbr  reflow-controller-B_Paste.gbr  reflow-controller-Edge_Cuts.gbr  reflow-controller-NPTH.drl
